Lower ambient CAP_SYS_NICE

To avoid leaking it to child processes.

BUG: 521013